web page update

--- a/index.html
+++ b/index.html
@@ -19,15 +19,60 @@
         <h2>Development Log</h2>
         <table class="tableStyle">
             <tr>
-                <th>Week</th>
                 <th>Task</th>
-                <th>Description</th>
                 <th>Person Assigned</th>
+                <th>Date Started</th>
                 <th>Date Completed</th>
                 <th>Backlog</th>
             </tr>
             <tr>
-                <td></td>
+                <td>Character movement</td>
+                <td>Adam Snyder</td>
+                <td>May 4</td>
+                <td>May 6</td>
+                <td>Create Trailer, Create scoring system, player death, character movement, shooting, viruses dying, virus behavior, cell behavior, UI, graphics, sound, music, antibodies, player health system, cell health system, powerups, create a level, Web page, level up system, difficulty settings, leaderboard</td>
+            </tr>
+            <tr>
+                <td>character shooting</td>
+                <td>Adam Snyder</td>
+                <td>May 4</td>
+                <td>May 6</td>
+            </tr>
+            <tr>
+                <td>Virus and Cell graphics</td>
+                <td>Adam Snyder</td>
+                <td>May 4</td>
+                <td>May 6</td>
+            </tr>
+            <tr>
+                <td>Power Up and functionality</td>
+                <td>Adam Snyder</td>
+                <td>May 12</td>
+                <td>May 14</td>
+            </tr>
+            <tr>
+                <td>Antibody graphics and behavior</td>
+                <td>Adam Snyder</td>
+                <td>May 14</td>
+                <td>May 17</td>
+            </tr>
+            <tr>
+                <td>Sound effects for shooting and power up</td>
+                <td>Adam Snyder</td>
+                <td>May 14</td>
+                <td>May 17</td>
+            </tr>
+            <tr>
+                <td>Added webpage to github</td>
+                <td>Adam Snyder</td>
+                <td>May 14</td>
+                <td>May 17</td>
+            </tr>
+            <tr>
+                <td>Graphics for character and crosshairs</td>
+                <td>Adam Snyder</td>
+                <td>May 14</td>
+                <td>May 17</td>
             </tr>
         </table>
     </div>
@@ -40,7 +85,7 @@
     <div class="textColor">
         <h2>Credits</h2>
         <p>Adam Snyder</p>
-        <p>Daniel SMith</p>
+        <p>Daniel Smith</p>
         <p>Antonio Yun</p>
     </div>
     <div class="textColor">
