--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
     <div>
         <h1 class="description">Description:</h1>
         <div>
-            <p class="body">Our game is about a single, lonely white blood cell that must protect the body from viruses that are attempting to invade the body. The blood cell has only one weapon in it's arsenal, which is the all powerful antibodies! The white blood cell must destroy the viruses by shooting antibodies at them. In the body are many blood cells which the viruses are trying to infect, if too many get infected the body will be over run. Grab power ups to help the white blood cell eliminate the enemies, but be aware that power ups only last a shot amount of time while giving great power. Since the battle of white blood cells and the body is endless, so is this game. See how long you can survive before being taken over!</p>
-            
+            <p class="body">Our game is about a single, lonely white blood cell that must protect the body from viruses
+                that are attempting to invade the body. The blood cell has only one weapon in it's arsenal, which is the
+                all powerful antibodies! The white blood cell must destroy the viruses by shooting antibodies at them.
+                In the body are many blood cells which the viruses are trying to infect, if too many get infected the
+                body will be over run. Grab power ups to help the white blood cell eliminate the enemies, but be aware
+                that power ups only last a shot amount of time while giving great power. Since the battle of white blood
+                cells and the body is endless, so is this game. See how long you can survive before being taken over!
+            </p>
+
         </div>
+    </div>
+    <div id="navbar">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
     </div>
     <div class="description">
         <h2>Development Log</h2>
@@ -30,7 +42,10 @@
                 <td>Adam Snyder</td>
                 <td>May 4</td>
                 <td>May 6</td>
-                <td>Create Trailer, Create scoring system, player death, character movement, shooting, viruses dying, virus behavior, cell behavior, UI, graphics, sound, music, antibodies, player health system, cell health system, powerups, create a level, Web page, level up system, difficulty settings, leaderboard</td>
+                <td>Create Trailer, Create scoring system, player death, character movement, shooting, viruses dying,
+                    virus behavior, cell behavior, UI, graphics, sound, music, antibodies, player health system, cell
+                    health system, powerups, create a level, Web page, level up system, difficulty settings, leaderboard
+                </td>
             </tr>
             <tr>
                 <td>character shooting</td>
@@ -112,5 +127,6 @@
     </div>
 </body>
 
-<link href="VirusCSS.css" rel="stylesheet" type="text/css"/>
+<link href="VirusCSS.css" rel="stylesheet" type="text/css" />
+
 </html>
