--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <header>
 
 </header>
-
+<div id="navbar">
+    <a href="#devlog">Development Log</a>
+    <a href="#Webgl">WebGL</a>
+    <a href="#trailer">Trailer</a>
+</div>
 <title>Virus Attacks Development Page</title>
 
 <body>
@@ -22,12 +26,7 @@
 
         </div>
     </div>
-    <div id="navbar">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-    </div>
-    <div class="description">
+    <div id="devlog">
         <h2>Development Log</h2>
         <table class="tableStyle">
             <tr>
@@ -89,9 +88,57 @@
                 <td>May 14</td>
                 <td>May 17</td>
             </tr>
+            <tr>
+                <td>Intro Page</td>
+                <td>Antonio Yun</td>
+                <td>May 4</td>
+                <td>May 5</td>
+            </tr>
+            <tr>
+                <td>Settings Page</td>
+                <td>Antonio Yun</td>
+                <td>May 4</td>
+                <td>May 5</td>
+            </tr>
+            <tr>
+                <td>Highscore Page</td>
+                <td>Antonio Yun</td>
+                <td>May 4</td>
+                <td>May 5</td>
+            </tr>
+            <tr>
+                <td>In Game UI</td>
+                <td>Antonio Yun</td>
+                <td>May 6</td>
+                <td>May 7</td>
+            </tr>
+            <tr>
+                <td>Defeat move data to differnt scene</td>
+                <td>Antonio Yun</td>
+                <td>May 8</td>
+                <td>May 9</td>
+            </tr>
+            <tr>
+                <td>Defeat move data to differnt scene</td>
+                <td>Antonio Yun</td>
+                <td>May 8</td>
+                <td>May 10</td>
+            </tr>
+            <tr>
+                <td>Create Multiple lives</td>
+                <td>Antonio Yun</td>
+                <td>May 11</td>
+                <td>May 12</td>
+            </tr>
+            <tr>
+                <td>Defeat page</td>
+                <td>Antonio Yun</td>
+                <td>May 12</td>
+                <td>May 13</td>
+            </tr>
         </table>
     </div>
-    <div class="textColor">
+    <div id="Webgl">
         <h2>WebGL</h2>
     </div>
     <div class="textColor">
@@ -107,7 +154,7 @@
         <h2>References</h2>
         <p>None, all graphics and sounds were created by the development team.</p>
     </div>
-    <div class="textColor">
+    <div id="trailer">
         <h2>Trailer</h2>
     </div>
     <div class="textColor">
