--- a/index.html
+++ b/index.html
@@ -146,13 +146,28 @@
     </div>
     <div class="textColor">
         <h2>Credits</h2>
-        <p>Adam Snyder</p>
-        <p>Daniel Smith</p>
-        <p>Antonio Yun</p>
+        <p>Adam Snyder <br>
+            Daniel Smith <br>
+            Antonio Yun </p>
     </div>
     <div class="textColor">
         <h2>References</h2>
-        <p>None, all graphics and sounds were created by the development team.</p>
+        <p>Music: <br>
+            https://www.freesfx.co.uk/Category/Technological/231 <br>
+            Cool Storm <br>
+            https://www.freesfx.co.uk/Category/Electronica/208 <br>
+
+            Background picture for intro scene <br>
+            https://www.freepik.com/free-vector/realistic-viruses-background_5971309.htm <br>
+            Attribution:<a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by macrovector - www.freepik.com</a>
+            <br>
+            Background for death screen <br>
+            Lynn Greyling (publicdomainpictures.net)<br>
+            https://www.needpix.com/photo/download/1388565/background-texture-red-red-textured-surface-free-pictures-free-photos-free-images-royalty-free-free-illustrations <br>
+
+            CoronaVirus Background <br>
+            https://imgur.com/CYodxCn
+</p>
     </div>
     <div id="trailer">
         <h2>Trailer</h2>
@@ -162,9 +177,7 @@
     </div>
     <div class="textColor">
         <h2>Source Code</h2>
-    </div>
-    <div class="textColor">
-        <h2>Postmortem Presentation</h2>
+        <p><a href="https://github.com/Exevior86/CSS385Finalproject">Github Repository</a></p>
     </div>
     <div class="textColor">
         <h2>Game Presentation</h2>
