--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <td>Adam Snyder</td>
                 <td>May 4</td>
                 <td>May 6</td>
-                <td>Create Trailer, Create scoring system, player death, character movement, shooting, viruses dying,
+                <!-- <td>Create Trailer, Create scoring system, player death, character movement, shooting, viruses dying,
                     virus behavior, cell behavior, UI, graphics, sound, music, antibodies, player health system, cell
                     health system, powerups, create a level, Web page, level up system, difficulty settings, leaderboard
-                </td>
+                </td> -->
             </tr>
             <tr>
                 <td>character shooting</td>
@@ -77,16 +77,34 @@
                 <td>May 17</td>
             </tr>
             <tr>
-                <td>Added webpage to github</td>
+                <td>Graphics for character and crosshairs</td>
                 <td>Adam Snyder</td>
                 <td>May 14</td>
                 <td>May 17</td>
             </tr>
             <tr>
-                <td>Graphics for character and crosshairs</td>
+                <td>Character reset</td>
                 <td>Adam Snyder</td>
-                <td>May 14</td>
                 <td>May 17</td>
+                <td>May 18</td>
+            </tr>
+            <tr>
+                <td>Added webpage to github</td>
+                <td>Adam Snyder</td>
+                <td>May 18</td>
+                <td>May 19</td>
+            </tr>
+            <tr>
+                <td>Bomb added with UI updates</td>
+                <td>Adam Snyder</td>
+                <td>May 18</td>
+                <td>May 19</td>
+            </tr>
+            <tr>
+                <td>Bomb cooldown, visual effects</td>
+                <td>Adam Snyder</td>
+                <td>May 18</td>
+                <td>May 19</td>
             </tr>
             <tr>
                 <td>Intro Page</td>
@@ -115,26 +133,110 @@
             <tr>
                 <td>Defeat move data to differnt scene</td>
                 <td>Antonio Yun</td>
-                <td>May 8</td>
-                <td>May 9</td>
+                <td>May 7</td>
+                <td>May 10</td>
             </tr>
             <tr>
                 <td>Defeat move data to differnt scene</td>
                 <td>Antonio Yun</td>
-                <td>May 8</td>
                 <td>May 10</td>
+                <td>May 13</td>
             </tr>
             <tr>
                 <td>Create Multiple lives</td>
                 <td>Antonio Yun</td>
-                <td>May 11</td>
-                <td>May 12</td>
+                <td>May 13</td>
+                <td>May 16</td>
             </tr>
             <tr>
                 <td>Defeat page</td>
                 <td>Antonio Yun</td>
+                <td>May 16</td>
+                <td>May 19</td>
+            </tr>
+            <tr>
+                <td>Scoring System</td>
+                <td>Antonio Yun</td>
+                <td>May 19</td>
+                <td>May 22</td>
+            </tr>
+            <tr>
+                <td>Random powerup generation</td>
+                <td>Antonio Yun</td>
+                <td>May 22</td>
+                <td>May 26</td>
+            </tr>
+            <tr>
+                <td>Volumn control</td>
+                <td>Antonio Yun</td>
+                <td>May 26</td>
+                <td>May 30</td>
+            </tr>
+            <tr>
+                <td>Pause</td>
+                <td>Antonio Yun</td>
+                <td>May 30</td>
+                <td>June 2</td>
+            </tr>
+            <tr>
+                <td>Cells behavior</td>
+                <td>Daniel James Smith</td>
+                <td>May 3</td>
+                <td>May 6</td>
+            </tr>
+            <tr>
+                <td>Virus behavior</td>
+                <td>Daniel James Smith</td>
+                <td>May 6</td>
+                <td>May 9</td>
+            </tr>
+            <tr>
+                <td>Better damage system</td>
+                <td>Daniel James Smith</td>
+                <td>May 9</td>
                 <td>May 12</td>
-                <td>May 13</td>
+            </tr>
+            <tr>
+                <td>Sound effects when hit</td>
+                <td>Daniel James Smith</td>
+                <td>May 12</td>
+                <td>May 15</td>
+            </tr>
+            <tr>
+                <td>Screen flash</td>
+                <td>Daniel James Smith</td>
+                <td>May 15</td>
+                <td>May 18</td>
+            </tr>
+            <tr>
+                <td>Better death feedback</td>
+                <td>Daniel James Smith</td>
+                <td>May 18</td>
+                <td>May 21</td>
+            </tr>
+            <tr>
+                <td>Cells health bar</td>
+                <td>Daniel James Smith</td>
+                <td>May 21</td>
+                <td>May 24</td>
+            </tr>
+            <tr>
+                <td>Virus movement</td>
+                <td>Daniel James Smith</td>
+                <td>May 24</td>
+                <td>May 27</td>
+            </tr>
+            <tr>
+                <td>Cells curing with antibody</td>
+                <td>Daniel James Smith</td>
+                <td>May 27</td>
+                <td>May 30</td>
+            </tr>
+            <tr>
+                <td>Make survival level</td>
+                <td>Daniel James Smith</td>
+                <td>May 30</td>
+                <td>June 2</td>
             </tr>
         </table>
     </div>
@@ -159,15 +261,17 @@
 
             Background picture for intro scene <br>
             https://www.freepik.com/free-vector/realistic-viruses-background_5971309.htm <br>
-            Attribution:<a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by macrovector - www.freepik.com</a>
+            Attribution:<a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by
+                macrovector - www.freepik.com</a>
             <br>
             Background for death screen <br>
             Lynn Greyling (publicdomainpictures.net)<br>
-            https://www.needpix.com/photo/download/1388565/background-texture-red-red-textured-surface-free-pictures-free-photos-free-images-royalty-free-free-illustrations <br>
+            https://www.needpix.com/photo/download/1388565/background-texture-red-red-textured-surface-free-pictures-free-photos-free-images-royalty-free-free-illustrations
+            <br>
 
             CoronaVirus Background <br>
             https://imgur.com/CYodxCn
-</p>
+        </p>
     </div>
     <div id="trailer">
         <h2>Trailer</h2>
