--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             width="1000"></iframe>
     </div>
     <div class="textColor">
-        <h2>Playtesting Reports</h2>
+        <h2>Digital Prototype Playtesting Reports</h2>
         <h3>Data</h3>
         <img src="img/data1.PNG" alt="Data1">
         <img src="img/data2.PNG" alt="Data2">
@@ -336,13 +336,171 @@
         <h5>&emsp;&emsp;&emsp;* We hoped that players would be interested in replaying the same level to get a better
             score, but that doesn’t seem realistic now</h5>
         <h5>&emsp;&emsp;* Add alternate control options, such as a keyboard key to shoot</h5>
-
+        <h2>Alpha Playtesting Reports</h2>
+        <h3>Data</h3>
+        <img src="img/data1.PNG" alt="Data1">
+        <img src="img/data2.PNG" alt="Data2">
+        <img src="img/data3.PNG" alt="Data3">
+        <img src="img/data4.PNG" alt="Data4">
+        <img src="img/data5.PNG" alt="Data5">
+        <img src="img/data6.PNG" alt="Data6">
+        <h3>Google Form Comments</h3>
+        <h5>&emsp;&emsp;* “The secondary fighter that comes after you play for a bit drifts outside the map range when
+            you're at the bottom of the map. I would use some camera clamping script so it doesn't show outside the
+            border. I would suggest to ramp up the enemy creation in the first level or reduce the amount of enemies
+            needed to kill. It felt really slow trying to get to 150.”</h5>
+        <h5>&emsp;&emsp;* “Honestly the game is super fun and I'm a huge fan of these types of games”</h5>
+        <h3>Player Observation</h3>
+        <h4>&emsp;General Observation</h4>
+        <h5>&emsp;&emsp;* Many players wanted to press the home button on the mid-level screen</h5>
+        <h5>&emsp;&emsp;* It seems like most players didn’t notice that they got the clone upgrade</h5>
+        <h4>&emsp;Specific Observation</h4>
+        <h5>&emsp;Playtester 1</h5>
+        <h5>&emsp;&emsp;* DIdn’t realize he could move at first</h5>
+        <h5>&emsp;&emsp;* Asked about what happens at 150 kills (That’s how many the first level required)</h5>
+        <h5>&emsp;&emsp;* On level1, the player was able to keep the viruses in control so they didn’t spawn quickly
+            enough to be interesting</h5>
+        <h5>&emsp;&emsp;* Expected something to happen when score reached 150(time)</h5>
+        <h5>&emsp;&emsp;* Didn’t continue after the first level ended, evidently because they didn’t realize that the
+            end screen allowed them to progress</h5>
+        <h5>&emsp;&emsp;&emsp;* The mid-level screen looks like the game is over</h5>
+        <h5>&emsp;Playtester 2</h5>
+        <h5>&emsp;&emsp;* Asked what happens when they get an upgrade</h5>
+        <h5>&emsp;&emsp;* Took a seconds to realize that the upgrade was getting an additional character</h5>
+        <h5>&emsp;Playtester 3</h5>
+        <h5>&emsp;&emsp;* Said that the first two levels could be harder</h5>
+        <h5>&emsp;&emsp;* Asked to be able to turn down shooting volume because the sound is annoying</h5>
+        <h5>&emsp;Playtester 4</h5>
+        <h5>&emsp;&emsp;* More Animations and feedback from the game</h5>
+        <h5>&emsp;&emsp;* Sound needs to be able to be adjusted and reduced overall by half or more</h5>
+        <h5>&emsp;&emsp;* Bomb needs animation -- minor</h5>
+        <h5>&emsp;&emsp;* Need a how to so players can learn how to play the game</h5>
+        <h5>&emsp;&emsp;* Death animation/fade to defeat screen so it’s not so abrupt</h5>
+        <h5>&emsp;&emsp;* Score needs to be changed from a double such as 34.565435 to something more appeasing</h5>
+        <h5>&emsp;&emsp;* Reset health and all other variables on level change</h5>
+        <h5>&emsp;&emsp;* Professor felt as if he was invincible health/damage system doesn’t have good feedback (maybe
+            flash the screen when hit)</h5>
+        <h5>&emsp;&emsp;* Level 1 was too easy too many units to kill</h5>
+        <h5>&emsp;&emsp;* Level 2 was just about right</h5>
+        <h5>&emsp;&emsp;* Level 3 seemed fine</h5>
+        <h5>&emsp;&emsp;* Lots of pink… maybe need better color scheme</h5>
+        <h3>Reflection</h3>
+        <h4>&emsp;What we learned during this playtest</h4>
+        <h5>&emsp;&emsp;* Our game lacks feedback</h5>
+        <h5>&emsp;&emsp;&emsp;* It’s not obvious when the player loses life</h5>
+        <h5>&emsp;&emsp;&emsp;* Most players didn’t realize when they got an upgrade</h5>
+        <h5>&emsp;&emsp;* Our UI is confusing</h5>
+        <h5>&emsp;&emsp;&emsp;* Visually unintuitive</h5>
+        <h5>&emsp;&emsp;&emsp;* Players confused score with enemies destroyed</h5>
+        <h5>&emsp;&emsp;&emsp;* The end-of-level screen looks like the game is over</h5>
+        <h5>&emsp;&emsp;* Our game doesn’t communicate all mechanics well</h5>
+        <h5>&emsp;&emsp;&emsp;* Some players were confused about the controls</h5>
+        <h5>&emsp;&emsp;&emsp;* Players didn’t understand win condition at first</h5>
+        <h5>&emsp;&emsp;&emsp;* It’s not initial obvious that players can cure infected cells</h5>
+        <h5>&emsp;&emsp;* The levels we prepared for the alpha were too easy</h5>
+        <h5>&emsp;&emsp;&emsp;* When players can destroy all viruses as soon as they spawn, The difficulty doesn’t
+            increase and the game becomes boring</h5>
+        <h4>&emsp;What we plan to do differently based on these observations</h4>
+        <h5>&emsp;&emsp;* Add a way to adjust the sound</h5>
+        <h5>&emsp;&emsp;* Change the score to be something of more substance instead of a double with 6 significant
+            digits</h5>
+        <h5>&emsp;&emsp;* Add feedback for getting hit by the virus such as a sound effect plus the screen flashing to
+            indicate receiving damage</h5>
+        <h5>&emsp;&emsp;* Add a transition for when the player defeats the level or gets defeated and add a sound effect
+            as well</h5>
+        <h5>&emsp;&emsp;* Add a how to screen to the intro scene to explain the controls and what to do in the game
+            specifically</h5>
+        <h2>Final(Beta) Playtesting Reports</h2>
+        <h3>Data</h3>
+        <img src="img/data1.PNG" alt="Data1">
+        <img src="img/data2.PNG" alt="Data2">
+        <img src="img/data3.PNG" alt="Data3">
+        <img src="img/data4.PNG" alt="Data4">
+        <img src="img/data5.PNG" alt="Data5">
+        <img src="img/data6.PNG" alt="Data6">
+        <h3>Google Form Comments</h3>
+        <h5>&emsp;&emsp;* Maybe make the virus objects more aggressive in trying to attack the player, that way you
+            could increase the frequency and duration of the power-ups!</h5>
+        <h5>&emsp;&emsp;*Looks great, love the look, feels really functional, feels pretty complete. after beating a
+            level maybe move toward the next one automatically?</h5>
+        <h3>Player Observation</h3>
+        <h4>&emsp;General Observation</h4>
+        <h5>&emsp;&emsp;* Players reacted strongly to the screenshake and flash when taking damage. Some players audibly
+            reacted</h5>
+        <h5>&emsp;&emsp;* Players playing survival mode were surprised by how difficult the level got. They often
+            laughed and said things like:</h5>
+        <h5>&emsp;&emsp;&emsp;* “This is nuts. The whole screen is covered”</h5>
+        <h5>&emsp;&emsp;&emsp;* “These guys are so fast”</h5>
+        <h5>&emsp;&emsp;&emsp;* “Oh, there’s actually so many of them”</h5>
+        <h5>&emsp;&emsp;* Players didn’t realize what caused a level win in campaign mode. They didn’t complain about
+            it, but we know it caused confusion because the developers asked</h5>
+        <h4>&emsp;Specific Observation</h4>
+        <h5>&emsp;Playtester 1</h5>
+        <h5>&emsp;&emsp;* Said that the title screen looks fuzzy and hard to read</h5>
+        <h5>&emsp;&emsp;* Level 1: “Is this the only cluster I need to protect?”</h5>
+        <h5>&emsp;&emsp;&emsp;* Didn’t realize there were other cells elsewhere in the map</h5>
+        <h5>&emsp;&emsp;* Continue button didn’t resize correctly in the player’s resolution.</h5>
+        <h5>&emsp;&emsp;* Level 3: was initially confused. Took a while to figure out where the cells were</h5>
+        <h5>&emsp;&emsp;* “Oh, I can pick up powerups. Oh cool”</h5>
+        <h5>&emsp;&emsp;* Played whole campaign</h5>
+        <h5>&emsp;&emsp;&emsp;* Never got hit once</h5>
+        <h5>&emsp;&emsp;&emsp;* Said was too easy</h5>
+        <h5>&emsp;&emsp;* “When do you get another character?”</h5>
+        <h5>&emsp;&emsp;&emsp;* Noticed that they got another character but was curious how</h5>
+        <h5>&emsp;&emsp;* Didn’t realize you could sprint</h5>
+        <h5>&emsp;&emsp;* “You should move difficulty settings so that they’re more obvious”</h5>
+        <h5>&emsp;&emsp;* Knew there were bombs because they’re mention on the UI, but didn’t know how to use them</h5>
+        <h5>&emsp;Playtester 2</h5>
+        <h5>&emsp;&emsp;* “Do these guys duplicate?”</h5>
+        <h5>&emsp;&emsp;&emsp;* Asking how the viruses spawn</h5>
+        <h5>&emsp;&emsp;* “I wonder if bullets should be faster”</h5>
+        <h5>&emsp;&emsp;&emsp;* Looks weird that you can outrun bullets when you sprint</h5>
+        <h5>&emsp;&emsp;* Seems unfair when viruses spawn on top of player</h5>
+        <h5>&emsp;&emsp;* Noticed a bug where one click uses all bombs</h5>
+        <h5>&emsp;&emsp;* Asked if there was a way to see your kills during a game</h5>
+        <h5>&emsp;&emsp;&emsp;* Said that they wanted to compare with their previous run</h5>
+        <h5>&emsp;Playtester 3</h5>
+        <h5>&emsp;&emsp;* Confused that both player and clones didn’t cure cells</h5>
+        <h5>&emsp;&emsp;* Forgot about bombs until one of the developers reminded him</h5>
+        <h5>&emsp;&emsp;* Satisfied when getting powerup</h5>
+        <h5>&emsp;&emsp;* Survived without taking much damage on hard mode</h5>
+        <h5>&emsp;&emsp;* Noticed a bug where sound gets louder the more clones you have</h5>
+        <h3>Reflection</h3>
+        <h4>&emsp;What we learned during this playtest</h4>
+        <h5>&emsp;&emsp;* Some of the levels are confusing at first. Since only a portion of the level was visible,
+            players didn’t know where the cells were at first.</h5>
+        <h5>&emsp;&emsp;* Players won’t pick up on all mechanics themselves</h5>
+        <h5>&emsp;&emsp;&emsp;* Players generally didn’t know how to activate bomb or sprint</h5>
+        <h5>&emsp;&emsp;&emsp;* They also didn’t understand what causes them to win a level in campaign mode</h5>
+        <h5>&emsp;&emsp;* Campaign mode was too easy, even on hard mode</h5>
+        <h5>&emsp;&emsp;* Nobody will realize there’s a difficulty slider if it’s in the settings screen</h5>
+        <h5>&emsp;&emsp;* Players react well to having many viruses on screen and the feeling that enemies are taking
+            over the level</h5>
+        <h4>&emsp;What we plan to do differently based on these observations</h4>
+        <h5>&emsp;&emsp;* Add an instruction screen to explain the controls and how the games works</h5>
+        <h5>&emsp;&emsp;* Make the difficulty harder on all modes</h5>
+        <h5>&emsp;&emsp;* Put the difficulty option in a place players can’t miss</h5>
+        <h5>&emsp;&emsp;* Design levels to leverage the virus spreading mechanics and force the player to deal with
+            large numbers of enemies</h5>
+        <h5>&emsp;&emsp;&emsp;* Players liked survival mode, so we want to make more levels like that</h5>
+        <h5>&emsp;&emsp;* Tweak the levels to be more intuitive</h5>
+        <h5>&emsp;&emsp;&emsp;* Maybe initially place the player so that some cells start out visible</h5>
+        <h5>&emsp;&emsp;* Differentiate player and clones with different color or size</h5>
+        <h4>&emsp;Recommendations for future extensions that we did not get to implement</h4>
+        <h5>&emsp;&emsp;* Redesign the campaign mode to use a more meaningful objective</h5>
+        <h5>&emsp;&emsp;&emsp;* Currently, the player proceeds to the next level when they defeat a certain number of
+            enemies. It seems like players found this objective unintuitive and unrewarding</h5>
+        <h5>&emsp;&emsp;* Tweak the size of the camera and level elements so that the players have a better sense of
+            what is in a level as soon as they start playing</h5>
+        <h5>&emsp;&emsp;&emsp;* Currently, players don’t know what is in a level unless they explore it</h5>
+        <h5>&emsp;&emsp;* Include a tutorial explaining how viruses spawn and infect cells</h5>
+        <h5>&emsp;&emsp;* Add a UI element indicating when the player will get another clone</h5>
     </div>
     <div class="textColor">
         <h2>Credits</h2>
-        <p>Adam Snyder <br>
-            Daniel Smith <br>
-            Antonio Yun </p>
+        <p>Adam Snyder -- Graphics and sound<br>
+            Daniel Smith -- Game mechanics<br>
+            Antonio Yun -- Game design and UI</p>
     </div>
     <div class="textColor">
         <h2>References</h2>
@@ -362,7 +520,11 @@
             <br>
 
             CoronaVirus Background <br>
-            https://imgur.com/CYodxCn
+            https://imgur.com/CYodxCn<br>
+            Background for settings<br>
+            https://unsplash.com/photos/BbP7rqIGB3c<br>
+            Photo by CDC on Unsplash<br>
+
         </p>
     </div>
     <div id="trailer">
@@ -382,6 +544,7 @@
     </div>
     <div class="textColor">
         <h2>Team Reflection</h2>
+
     </div>
 </body>
 
