--- a/index.html
+++ b/index.html
@@ -338,12 +338,12 @@
         <h5>&emsp;&emsp;* Add alternate control options, such as a keyboard key to shoot</h5>
         <h2>Alpha Playtesting Reports</h2>
         <h3>Data</h3>
-        <img src="img/data1.PNG" alt="Data1">
-        <img src="img/data2.PNG" alt="Data2">
-        <img src="img/data3.PNG" alt="Data3">
-        <img src="img/data4.PNG" alt="Data4">
-        <img src="img/data5.PNG" alt="Data5">
-        <img src="img/data6.PNG" alt="Data6">
+        <img src="img/Alpha1.PNG" alt="Alpha1">
+        <img src="img/Alpha2.PNG" alt="Alpha2">
+        <img src="img/Alpha3.PNG" alt="Alpha3">
+        <img src="img/Alpha4.PNG" alt="Alpha4">
+        <img src="img/Alpha5.PNG" alt="Alpha5">
+        <img src="img/Alpha6.PNG" alt="Alpha6">
         <h3>Google Form Comments</h3>
         <h5>&emsp;&emsp;* “The secondary fighter that comes after you play for a bit drifts outside the map range when
             you're at the bottom of the map. I would use some camera clamping script so it doesn't show outside the
@@ -411,13 +411,6 @@
         <h5>&emsp;&emsp;* Add a how to screen to the intro scene to explain the controls and what to do in the game
             specifically</h5>
         <h2>Final(Beta) Playtesting Reports</h2>
-        <h3>Data</h3>
-        <img src="img/data1.PNG" alt="Data1">
-        <img src="img/data2.PNG" alt="Data2">
-        <img src="img/data3.PNG" alt="Data3">
-        <img src="img/data4.PNG" alt="Data4">
-        <img src="img/data5.PNG" alt="Data5">
-        <img src="img/data6.PNG" alt="Data6">
         <h3>Google Form Comments</h3>
         <h5>&emsp;&emsp;* Maybe make the virus objects more aggressive in trying to attack the player, that way you
             could increase the frequency and duration of the power-ups!</h5>
