--- a/index.html
+++ b/index.html
@@ -250,6 +250,8 @@
                 <td>June 2</td>
             </tr>
         </table>
+        <br>
+        <a href="https://trello.com/b/GKypMp7S/final-project-board">Link to Trello board</a>
     </div>
     <div id="Webgl">
         <h2>WebGL</h2>
