--- a/index.html
+++ b/index.html
@@ -321,27 +321,27 @@
               <!-- Full-width images with number and caption text -->
               <div class="mySlides fade">
                 <div class="numbertext">1 / 5</div>
-                <img src="img/Presentation1.PNG" style="width:100%">
+                <img src="img/Presentation1.png" style="width:100%">
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">2 / 5</div>
-                <img src="img/Presentation2.PNG" style="width:100%">
+                <img src="img/Presentation2.png" style="width:100%">
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">3 / 5</div>
-                <img src="img/Presentation3.PNG" style="width:100%">
+                <img src="img/Presentation3.png" style="width:100%">
                   
               </div>
                 <div class="mySlides fade">
                 <div class="numbertext">3 / 5</div>
-                <img src="img/Presentation4.PNG" style="width:100%">
+                <img src="img/Presentation4.png" style="width:100%">
                     
               </div>
                 <div class="mySlides fade">
                 <div class="numbertext">3 / 5</div>
-                <img src="img/Presentation5.PNG" style="width:100%">
+                <img src="img/Presentation5.png" style="width:100%">
               </div>
 
               <!-- Next and previous buttons -->
