--- a/playtest.html
+++ b/playtest.html
@@ -6,90 +6,13 @@
 </header>
     <body>
 <div class="textColor">
-        <h2>Playtesting Reports</h2>
-        <h3>Data</h3>
+        <h1>Playtesting Reports</h1><br>
         <a href="index.html">Back</a><br>
-    
-        <img src="img/data1.PNG" alt="Data1">
-        <img src="img/data2.PNG" alt="Data2">
-        <img src="img/data3.PNG" alt="Data3">
-        <img src="img/data4.PNG" alt="Data4">
-        <img src="img/data5.PNG" alt="Data5">
-        <img src="img/data6.PNG" alt="Data6">
-        <h3>Google Form Comments</h3>
-        <h5>&emsp;&emsp;* A screen-wide kill-all-enemies weapons would be a cool addition, for limited uses
-        </h5>
-        <h5>&emsp;&emsp;* Have another way to shoot other than just clicking, like pressing space bar.
-        </h5>
-        <h5>&emsp;&emsp;* There are too many viruses and it is impossible to kill them all, try to have different
-            weapons or triple shooter for example
-        </h5>
-        <h5>&emsp;&emsp;* The shooting mechanics were very smooth, and aiming was smooth too. (: but the game was kinda
-            too challenging, and didn't notice what power up actually changes
-        </h5>
-        <h5>&emsp;&emsp;* Really fun game, really excited to see how it turns out when it's finished
-        </h5>
-        <h5>&emsp;&emsp;* Consider implementing some script that prevents additional enemies from spawning when a player
-            is in a certain radius. It is too difficult to get to cells to heal if enemies are spawning on top of the
-            player. The music if fun!
-        </h5>
-        <h5>&emsp;&emsp;* Powerups should respawn? Map size makes it difficult to manage cells since they get reinfected
-            very quickly. Shoot speed if fine if it's not in overwhelm. Touch to fix is not clear, for a while I thought
-            it was also the shooting mechanic.
-        </h5>
-        <h3>Player Observation</h3>
-        <h4>&emsp;General Observation</h4>
-        <h5>&emsp;&emsp;* Asked if there was an objective other than surviving
-        </h5>
-        <h5>&emsp;&emsp;* Didn’t retry after dying once
-        </h5>
-        <h5>&emsp;&emsp;* Death was very quick since our prototype was difficult, so none of the testers played for more
-            that a minute or so
-        </h5>
-        <h4>&emsp;Specific Observation</h4>
-        <h5>&emsp;Player 1</h5>
-        <h5>&emsp;&emsp;* Took a seconds to realize that the main character was the main character
-        </h5>
-        <h5>&emsp;&emsp;* Intuitively understood how to shoot and collect pickups
-        </h5>
-        <h5>&emsp;&emsp;* Accidently cured a cell by running over it. Then vocalized realization of that mechanic
-        </h5>
-        <h5>&emsp;Player 3</h5>
-        <h5>&emsp;&emsp;* Asked whether there was a way to shoot other than mouse click. Said using the mouse felt
-            awkward
-        </h5>
-        <h3>Reflection</h3>
-        <h4>&emsp;What we learned during this playtest</h4>
-        <h5>&emsp;&emsp;* Some players found the game confusing</h5>
-        <h5>&emsp;&emsp;&emsp;* It seems like players didn’t understand what powerups did or were aware when the
-            collected them</h5>
-        <h5>&emsp;&emsp;&emsp;* It seems like players didn’t understand that they could cure cells by touching them</h5>
-        <h5>&emsp;&emsp;* We didn’t get encouraging responses to our google form question “Did the game feel good.”
-            Players found the game unsatisfying</h5>
-        <h5>&emsp;&emsp;&emsp;* There are few sound effects or other elements of feedback that improve feel</h5>
-        <h5>&emsp;&emsp;&emsp;* One of the comments we got was that enemies can spawn on top of the player, which is
-            probably very frustrating</h5>
-        <h5>&emsp;&emsp;* Players felt overwhelmed by the enemies. The viruses spawned too quickly and were too good at
-            taking over the screen</h5>
-        <h5>&emsp;&emsp;* Replaying a level isn’t interesting enough.</h5>
-        <h5>&emsp;&emsp;&emsp;* No player retried the prototype once</h5>
-        <h5>&emsp;&emsp;&emsp;* Every player asked if there was more to the game</h5>
-        <h4>&emsp;What we plan to do differently based on these observations</h4>
-        <h5>&emsp;&emsp;* Add some particle effects or sounds to make it more clear that the player has cured cells or
-            hit enemies</h5>
-        <h5>&emsp;&emsp;&emsp;* Making changes like this should make the game more intuitive and better feeling</h5>
-        <h5>&emsp;&emsp;* Weaken the viruses so that the player feels more able to control the enemies</h5>
-        <h5>&emsp;&emsp;* Add player abilities such as a screen clearing bomb to make the player more powerful compared
-            to the viruses</h5>
-        <h5>&emsp;&emsp;* Add level progression.</h5>
-        <h5>&emsp;&emsp;&emsp;* We hoped that players would be interested in replaying the same level to get a better
-            score, but that doesn’t seem realistic now</h5>
-        <h5>&emsp;&emsp;* Add alternate control options, such as a keyboard key to shoot</h5>
 
     </div>
         <div class="textColor">
         <h2>Digital Prototype Playtesting Reports</h2>
-        <h3>Data</h3>
+        <h3>Screen shots of questionare form</h3>
         <img src="img/data1.PNG" alt="Data1">
         <img src="img/data2.PNG" alt="Data2">
         <img src="img/data3.PNG" alt="Data3">
